Started addressing findings in lang-java