@@ -62,7 +62,7 @@ public class DynamicTransformer implements ClassFileTransformer {
 
 	// ====================================== INSTANCE MEMBERS
 
-	private String id = new Double(Math.random()).toString();
+	private String id = Double.toString(Math.random());
 
 	private LoaderHierarchy loaderHierarchy = new LoaderHierarchy();
 
@@ -198,7 +198,7 @@ public class DynamicTransformer implements ClassFileTransformer {
 								cv.visitConstructors(true);
 								cv.finalizeInstrumentation();
 								byteCode = cv.getBytecode();
-								this.instrControl.updateInstrumentationStatistics(cv.getJavaId(), new Boolean(true));
+								this.instrControl.updateInstrumentationStatistics(cv.getJavaId(), Boolean.valueOf(true));
 								DynamicTransformer.log.debug("Class [" + dot_classname + "] now instrumented");
 							}
 							else {
@@ -209,16 +209,16 @@ public class DynamicTransformer implements ClassFileTransformer {
 					}
 					catch (IOException ioe) {
 						DynamicTransformer.log.error("I/O exception while instrumenting class [" + dot_classname + "]: " + ioe.getMessage());
-						this.instrControl.updateInstrumentationStatistics(cv.getJavaId(), new Boolean(false));
+						this.instrControl.updateInstrumentationStatistics(cv.getJavaId(), Boolean.valueOf(false));
 					}
 					catch (CannotCompileException cce) {
 						DynamicTransformer.log.warn("Cannot compile instrumented class [" + dot_classname + "]: " + cce.getMessage());
-						this.instrControl.updateInstrumentationStatistics(cv.getJavaId(), new Boolean(false));
+						this.instrControl.updateInstrumentationStatistics(cv.getJavaId(), Boolean.valueOf(false));
 					}
 					// Covers the following problems with Javassist and Java 8: "java.io.IOException: invalid constant type: 15"
 					catch (Exception e) {
 						DynamicTransformer.log.warn(e.getClass().getName() + " occured while instrumenting class [" + dot_classname + "]: " + e.getMessage());
-						this.instrControl.updateInstrumentationStatistics(cv.getJavaId(), new Boolean(false));
+						this.instrControl.updateInstrumentationStatistics(cv.getJavaId(), Boolean.valueOf(false));
 					}
 				}
 			}
